# rag-service

./: .env  .gitignore  api.py  pyproject.toml  requirements.txt
RAG/: chunks.py  extractor.py  pineDB.py
